--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
                 <a href="index.html">Inicio</a>
             </li>
             <li>
-                <a href="./Pages/Dulces/Dulces.html">
+                <a href="./pages/Dulces/Dulces.html">
                     Dulces
                 </a>
             </li>
 
             <li>
-                <a href="./Pages/Salados/Salados.html">
+                <a href="./pages/Salados/Salados.html">
                     Salados
                 </a>
             </li>
 
             <li>
-                <a href="./Pages/Panes/Panes.html">
+                <a href="./pages/Panes/Panes.html">
                     Panes
                 </a>
             </li>
 
             <li>
-                <a href="./Pages/Vegetariano/Vegetariano.html">
+                <a href="./pages/Vegetariano/Vegetariano.html">
                     Vegetariano
                 </a>
 
             </li>
 
             <li>
-                <a href="./Pages/Tienda/Tienda.html">
+                <a href="./pages/Tienda/Tienda.html">
 
                     Tienda
                 </a>
