--- a/pages/Salados/Salados.html
+++ b/pages/Salados/Salados.html
@@ -70,7 +70,7 @@
 
 <section class="grid-conteiner">
     <div>
-    <img class="imagen_receta_salada_1"src="../../Images/Salado/ensalada_caesar.jpg" alt="Ensalada César">
+    <img class="imagen_receta_salada_1"src="../../Images/Salado/ensalada_caesar.JPG" alt="Ensalada César">
 
     </div>
     
