--- a/pages/Vegetariano/Vegetariano.html
+++ b/pages/Vegetariano/Vegetariano.html
@@ -107,7 +107,7 @@
 
     <div>
         <br/>
-        <img class="imagen_receta_vegetariano_2"src="../../Images/vegetariano/souffle_de_berenjena.jpg" alt="Pan casero">    
+        <img class="imagen_receta_vegetariano_2"src="../../Images/Vegetariano/souffle_de_berenjena.jpg" alt="Souffle de berenjenas">    
     </div>
 
     <div class="receta vegetariano 2">
