--- a/pages/Dulces/Dulces.html
+++ b/pages/Dulces/Dulces.html
@@ -7,7 +7,7 @@
     <title>Dulces</title>
     <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
 
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
 
 <section class="grid-conteiner">
     <div>
-    <img class="imagen_receta_dulce_1"src="../../Images/Dulce/bizcochuelo_vainilla.jpg" alt="bizcochuelo_vainilla">
+    <img class="imagen_receta"src="../../Images/Dulce/bizcochuelo_vainilla.jpg" alt="bizcochuelo_vainilla">
 
     </div>
     
@@ -115,7 +115,7 @@
 
     <div>
         <br/>
-        <img class="imagen_receta_dulce_1"src="../../Images/Dulce/Pastaflora.jpg" alt="Pastaflora">    
+        <img class="imagen_receta"src="../../Images/Dulce/Pastaflora.jpg" alt="Pastaflora">    
     </div>
 
     <div class="receta dulce 2">
