--- a/pages/Salados/Salados.html
+++ b/pages/Salados/Salados.html
@@ -7,7 +7,7 @@
     <title>Salados</title>
     <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
 
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
 
 <section class="grid-conteiner">
     <div>
-    <img class="imagen_receta_salada_1"src="../../Images/Salado/ensalada_caesar.jpg" alt="Ensalada César">
+    <img class="imagen_receta"src="../../Images/Salado/ensalada_caesar.jpg" alt="Ensalada César">
 
     </div>
     
@@ -113,7 +113,7 @@
 
     <div>
         <br/>
-        <img class="imagen_receta_salada_2"src="../../Images/Salado/guiso_arroz.jpg" alt="Guiso arroz">    
+        <img class="imagen_receta"src="../../Images/Salado/guiso_arroz.jpg" alt="Guiso arroz">    
     </div>
 
     <div class="receta salada 2">
