--- a/pages/Tienda/Tienda.html
+++ b/pages/Tienda/Tienda.html
@@ -7,7 +7,7 @@
     <title>Tienda</title>
     <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
 
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
