--- a/pages/Vegetariano/Vegetariano.html
+++ b/pages/Vegetariano/Vegetariano.html
@@ -7,7 +7,7 @@
     <title>Vegetariano</title>
     <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
 
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
 
 <section class="grid-conteiner">
     <div>
-    <img class="imagen_receta_vegetariano_1"src="../../Images/Vegetariano/Zapallitos_rellenos.jpg" alt="Zapallitos rellenos">
+    <img class="imagen_receta"src="../../Images/Vegetariano/Zapallitos_rellenos.jpg" alt="Zapallitos rellenos">
 
     </div>
     
@@ -107,7 +107,7 @@
 
     <div>
         <br/>
-        <img class="imagen_receta_vegetariano_2"src="../../Images/vegetariano/souffle_de_berenjena.jpg" alt="Pan casero">    
+        <img class="imagen_receta"src="../../Images/vegetariano/souffle_de_berenjena.jpg" alt="Pan casero">    
     </div>
 
     <div class="receta vegetariano 2">
