--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!--coneccion con css-->
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
 </head>
