--- a/pages/Panes/Panes.html
+++ b/pages/Panes/Panes.html
@@ -7,7 +7,7 @@
     <title>Panes</title>
     <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
 
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
 </header>
 <section class="grid-conteiner">
     <div>
-    <img class="imagen_receta_panes_1"src="../../Images/Panes/pancitos_saborizados.jpg" alt="Pancitos saborizados">
+    <img class="imagen_receta"src="../../Images/Panes/pancitos_saborizados.jpg" alt="Pancitos saborizados">
 
     </div>
     
@@ -115,7 +115,7 @@
 
     <div>
         <br/>
-        <img class="imagen_receta_panes_2"src="../../Images/Panes/pan_casero.jpg" alt="Pan casero">    
+        <img class="imagen_receta"src="../../Images/Panes/pan_casero.jpg" alt="Pan casero">    
     </div>
 
     <div class="receta panes 2">
