modificado por minusculas mayusculas

--- a/pages/Vegetariano/Vegetariano.html
+++ b/pages/Vegetariano/Vegetariano.html
@@ -107,7 +107,7 @@
 
     <div>
         <br/>
-        <img class="imagen_receta"src="../../Images/vegetariano/souffle_de_berenjena.jpg" alt="Pan casero">    
+        <img class="imagen_receta"src="../../Images/Vegetariano/souffle_de_berenjena.jpg" alt="souffle_de_berenjena">    
     </div>
 
     <div class="receta vegetariano 2">
