--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabytips</title>
+
+    <!--seo-->
+    <meta name="keywords" content="Recetas faciles y caseras">
+    <meta name="description" content="Recetas de comidas faciles rapidas y ricas de hacer para comer hoy. Listas en menos de 30 minutos. Además, con ingredientes económicos.">
+    
+    <!--protocolo open graph-->
+    <meta property="og:type" content="web site">
+    <meta property="og:title" content="clase seo">
+    <meta property="og:url" content="https://gabyriveroadmi.github.io/Gabytips/">
+    <meta property="og:img" content="https://github.com/GabyRiveroadmi/Gabytips/blob/main/Images/logo.jpg">
+    <meta name="og:description" content="Recetas de comidas faciles rapidas y ricas de hacer para comer hoy. Listas en menos de 30 minutos. Además, con ingredientes económicos.">
+ 
+    <!--title-->
+    <title>Gabytips - Inicio</title>
 
     <!--icono favicon-->
-
     <link rel="shortcut icon" href="./Images/faviconpage.png" type="Images/x-icon">
 
     <!--coneccion con css-->
-
     <link rel="stylesheet" href="./css/style.css">
 
 
