--- a/pages/Dulces/Dulces.html
+++ b/pages/Dulces/Dulces.html
@@ -4,7 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--seo-->
+    <meta name="keywords" content="Recetas dulces">
+    <meta name="description" content="Todas las recetas dulces fáciles están aquí">
+
+    <!--protocolo open graph-->
+    <meta property="og:type" content="web site">
+    <meta property="og:title" content="clase seo">
+    <meta property="og:url" content="https://gabyriveroadmi.github.io/Gabytips/">
+    <meta property="og:img" content="https://github.com/GabyRiveroadmi/Gabytips/blob/main/Images/logo.jpg">
+    <meta name="og:description" content="Todas las recetas dulces fáciles están aquí">
+
+
     <title>Dulces</title>
+
     <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
 
     <link rel="stylesheet" href="../../css/style.css">
