--- a/pages/Tienda/Tienda.html
+++ b/pages/Tienda/Tienda.html
@@ -4,8 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--seo-->
+    <meta name="keywords" content="Tienda">
+    <meta name="description" content="Productos para que puedas hacer tus recetas faciles">
+
+    <!--protocolo open graph-->
+    <meta property="og:type" content="web site">
+    <meta property="og:title" content="clase seo">
+    <meta property="og:url" content="https://gabyriveroadmi.github.io/Gabytips/">
+    <meta property="og:img" content="https://github.com/GabyRiveroadmi/Gabytips/blob/main/Images/logo.jpg">
+    <meta name="og:description" content="Productos para que puedas hacer tus recetas faciles">
+
     <title>Tienda</title>
-    <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
+    <link rel="shortcut icon" href="../../images/faviconpage.png" type="Images/x-icon">
 
     <link rel="stylesheet" href="../../css/style.css">
 </head>
@@ -15,7 +27,7 @@
 
         <!--logo-->
       
-     <img class="logo" src="../../Images/logo.jpg" alt="Logo">
+     <img class="logo" src="../../images/logo.jpg" alt="Logo">
     
 
     <nav class="menu">
@@ -24,32 +36,32 @@
                 <a href="../../index.html">Inicio</a>
             </li>
             <li>
-                <a href="../Dulces/Dulces.html">
+                <a href="../dulces/dulces.html">
                     Dulces
                 </a>
             </li>
 
             <li>
-                <a href="../Salados/Salados.html">
+                <a href="../salados/salados.html">
                     Salados
                 </a>
             </li>
 
             <li>
-                <a href="../Panes/Panes.html">
+                <a href="../panes/panes.html">
                     Panes
                 </a>
             </li>
 
             <li>
-                <a href="../Vegetariano/Vegetariano.html">
+                <a href="../vegetariano/vegetariano.html">
                     Vegetariano
                 </a>
 
             </li>
 
             <li>
-                <a href="../Tienda/Tienda.html">
+                <a href="../tienda/tienda.html">
 
                     Tienda
                 </a>
@@ -69,28 +81,28 @@
    <section class="articulos">
 
       <article class="articulo">
-        <img class="articulo" src="../..//Images/Tienda/cacerola_con_asas.jpg" alt="caserola_con_asas"
+        <img class="articulo" src="../..//images/tienda/cacerola_con_asas.jpg" alt="caserola_con_asas"
         <h2 class="titulo_articulo">Cacerola con asas</h2>
         <span class="precio">$25000</span>
         <button class="boton_articulo">Comprar</button>
       </article>
 
       <article class="articulo">
-        <img class="articulo" src="../..//Images/Tienda/molde_pan.jpg" alt="molde_pan
+        <img class="articulo" src="../..//images/tienda/molde_pan.jpg" alt="molde_pan
         <h2 class="titulo_articulo">Molde para pan</h2>
         <span class="precio">$7000</span>
         <button class="boton_articulo">Comprar</button>
       </article>
 
       <article class="articulo">
-        <img class="articulo" src="../..//Images/Tienda/sabarin.jpg" alt="sabarin"
+        <img class="articulo" src="../..//images/tienda/sabarin.jpg" alt="sabarin"
         <h2 class="titulo_articulo">Molde sabarin</h2>
         <span class="precio">$9000</span>
         <button class="boton_articulo">Comprar</button>
       </article>
 
       <article class="articulo">
-        <img class="articulo" src="../..//Images/Tienda/tartera_pastaflora.jpg" alt="tartera_pastaflora
+        <img class="articulo" src="../..//images/tienda/tartera_pastaflora.jpg" alt="tartera_pastaflora
         <h2 class="titulo_articulo">Tartera Pastaflora</h2>
         <span class="precio">$12000</span>
         <button class="boton_articulo">Comprar</button>
