--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Gabytips - Inicio</title>
 
     <!--icono favicon-->
-    <link rel="shortcut icon" href="./images/faviconpage.png" type="Images/x-icon">
+    <link rel="shortcut icon" href="./Images/faviconpage.png" type="Images/x-icon">
 
     <!--coneccion con css-->
     <link rel="stylesheet" href="./css/style.css">
@@ -34,7 +34,7 @@
 
   <!--logo-->
 
-    <img class="logo" src="images/logo.jpg" alt="Logo">
+    <img class="logo" src="Images/logo.jpg" alt="Logo">
 
  <!--secciones-->
 
@@ -44,32 +44,32 @@
                 <a href="index.html">Inicio</a>
             </li>
             <li>
-                <a href="./pages/dulces/dulces.html">
+                <a href="./pages/Dulces/Dulces.html">
                     Dulces
                 </a>
             </li>
 
             <li>
-                <a href="./pages/salados/salados.html">
+                <a href="./pages/Salados/Salados.html">
                     Salados
                 </a>
             </li>
 
             <li>
-                <a href="./pages/panes/panes.html">
+                <a href="./pages/Panes/Panes.html">
                     Panes
                 </a>
             </li>
 
             <li>
-                <a href="./pages/vegetariano/vegetariano.html">
+                <a href="./pages/Vegetariano/Vegetariano.html">
                     Vegetariano
                 </a>
 
             </li>
 
             <li>
-                <a href="./pages/tienda/tienda.html">
+                <a href="./pages/Tienda/Tienda.html">
 
                     Tienda
                 </a>
@@ -102,7 +102,7 @@
     
     <!--imagen luego del parrafo-->
     <div class="imagen-inicio">
-        <img src="images/ingredientes.jpg" alt="ingredientes">
+        <img src="Images/ingredientes.jpg" alt="ingredientes">
 
     </div>
     
