--- a/pages/Salados/Salados.html
+++ b/pages/Salados/Salados.html
@@ -4,6 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!--seo-->
+     <meta name="keywords" content="Recetas saladas">
+     <meta name="description" content="Todas las recetas saladas fáciles están aquí">
+ 
+     <!--protocolo open graph-->
+     <meta property="og:type" content="web site">
+     <meta property="og:title" content="clase seo">
+     <meta property="og:url" content="https://gabyriveroadmi.github.io/Gabytips/">
+     <meta property="og:img" content="https://github.com/GabyRiveroadmi/Gabytips/blob/main/Images/logo.jpg">
+     <meta name="og:description" content="Todas las recetas saladas fáciles están aquí">
+ 
+
     <title>Salados</title>
     <link rel="shortcut icon" href="../../Images/faviconpage.png" type="Images/x-icon">
 
