ultimas mejoras para entrega final

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <!--protocolo open graph-->
     <meta property="og:type" content="web site">
-    <meta property="og:title" content="clase seo">
+    <meta property="og:title" content="Gabytips">
     <meta property="og:url" content="https://gabyriveroadmi.github.io/Gabytips/">
     <meta property="og:img" content="https://github.com/GabyRiveroadmi/Gabytips/blob/main/Images/logo.jpg">
     <meta name="og:description" content="Recetas de comidas faciles rapidas y ricas de hacer para comer hoy. Listas en menos de 30 minutos. Además, con ingredientes económicos.">
