--- a/pages/Tienda/Tienda.html
+++ b/pages/Tienda/Tienda.html
@@ -11,7 +11,7 @@
  
      <!--protocolo open graph-->
      <meta property="og:type" content="web site">
-     <meta property="og:title" content="clase seo">
+     <meta property="og:title" content="Tienda">
      <meta property="og:url" content="https://gabyriveroadmi.github.io/Gabytips/">
      <meta property="og:img" content="https://github.com/GabyRiveroadmi/Gabytips/blob/main/Images/logo.jpg">
      <meta name="og:description" content="Tienda para poder realizar recetas faciles están aquí">
